--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: linux-64
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=1_gnu
+#_libgcc_mutex=0.1=conda_forge
+#_openmp_mutex=4.5=1_gnu
 abseil-cpp=20200923.3=h9c3ff4c_0
 absl-py=0.12.0=pypi_0
 adal=1.2.6=pyh44b312d_0
